--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.2",
     "markdown-it": "^8.4.2",
+    "markdown-it-link-attributes": "^2.1.0",
     "node-sass": "^4.11.0"
   },
   "devDependencies": {},
