--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/christophfranke/christophfranke.info#readme",
   "dependencies": {
+    "aphrodite": "^2.3.1",
     "dotenv": "^6.2.0",
     "dotenv-webpack": "^1.7.0",
     "next": "^8.0.3",
