--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
-    "build": "next build"
+    "build": "next build",
+    "export": "npm run build && next export"
   },
   "repository": {
     "type": "git",
