--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "aphrodite": "^2.3.1",
     "dotenv": "^6.2.0",
     "dotenv-webpack": "^1.7.0",
+    "keen-tracking": "^4.4.0",
     "next": "^8.0.3",
     "prismic-dom": "^2.1.0",
     "prismic-javascript": "^2.0.1",
